@@ -1,5 +1,6 @@
 appliedkernels="2.6.15"
-source="suspend2-2.2-for-${appliedkernels}.1.patch.bz2"
+depends="patch-2.6.16-rc4"
+source="suspend2-2.2.0.1-for-${depends/patch-/}.patch.bz2"
 source_url="http://download.sourcemage.org/distro/kernel/${source}"
 source_gpg="gurus.gpg:${source}.sig"
 gpg_source_url="${source_url}.sig"
