@@ -1,3 +1,11 @@
+2006-02-26 David Brown <dmlb2000@gmail.com>
+	* info/patches/sws2_patches/suspend2-2.2.0.1-for-2.6.16-rc4.patch: added
+
+2006-02-26 David Brown <dmlb2000@gmail.com>
+	* info/patches/sws2_patches/suspend2-2.2-for-2.6.15.1.patch: modified
+	  to fix source url because depends is no longer a var for the patch
+	* info/patches/sws2_patches/suspend2-2.2.0.1-for-2.6.16-rc3.patch: added
+
 2006-02-24 David Brown <dmlb2000@gmail.com>
 	* info/patches/sws2_patches/suspend2-2.2-for-2.6.15.1.patch: modified
 	  to remove depends on patch-2.6.15.1 cause it does work on others
